# website

./: .gitignore  .htmltest.yml  CLAUDE.md  CNAME  Makefile  README.md  pelicanconf.py  publishconf.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pelican-deploy.yml
content/: article.rst  articolo.rst
content/extra/: CNAME
content/pages/: about.md
theme/: FONT-AWESOME-PATCH.md  README.md  bootstrap2-dark-font-awesome.patch  bootstrap2-dark.patch
theme/templates/: archives.html  article.html  article_infos.html  authors.html  base.html  index.html  page.html  search_sidebar.html  sidebar.html  taglist.html  tags.html  translations.html  twitter_profile.html
