[project]
name = "www"
version = "0.1.0"
description = "www.gurutech.it"
authors = [
    {name = "Gianluca",email = "gianluca@gurutech.it"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
